@@ -295,8 +295,10 @@ function rcube_webmail()
       case 'settings':
         this.enable_command('preferences', 'identities', 'save', 'folders', true);
         
-        if (this.env.action=='identities' || this.env.action=='edit-identity' || this.env.action=='add-identity')
-          this.enable_command('edit', 'add', 'delete', true);
+        if (this.env.action=='identities' || this.env.action=='edit-identity' || this.env.action=='add-identity') {
+          this.enable_command('add', 'delete', this.env.multiple_identities);
+          this.enable_command('edit', true);
+        }
 
         if (this.env.action=='edit-identity' || this.env.action=='add-identity')
           this.enable_command('save', true);
